--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/Todo_App",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -88,5 +89,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "f93200a5-30ab-4015-8077-50f43acba2f1"
   }
 }
