--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             ],
             "styles": [
               "bootstrap/dist/css/bootstrap.min.css",
+              "bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.css"
             ],
              "scripts": [
@@ -87,8 +88,9 @@
               }
             ],
             "styles": [
-              "src/styles.css",
-              "bootstrap/dist/css/bootstrap.min.css"
+              "bootstrap/dist/css/bootstrap.min.css",
+              "bootstrap-icons/font/bootstrap-icons.css",
+              "src/styles.css"
             ],
             "scripts": [
               "bootstrap/dist/js/bootstrap.min.js"
